src/main/java/com/example/bankapplication/controllers/errors/BadDateException.java
package com.example.bankapplication.controllers.errors;

public class BadDateException extends Exception {
}
